# Agents-Sandbox-

./: .env.example  .gitignore  README.md  SOUL.md  mcp.json.example  pyproject.toml
.cursor/rules/: project-rules.mdc
data/corpus/: agents_overview.md  g.md  hybrid_routing.md  memory_and_tools.md  n.md  rag_systems.md  super.md
rules/: base.md
skills/: concise.md  step_by_step.md  teacher.md
src/localagent/: __init__.py  approval.py  cli.py  config.py  eval.py  llm.py  logging_setup.py  mcp_tools.py  memory.py  rules.py  skills.py  soul.py
src/localagent/agents/: __init__.py  agentic_rag.py  args.py  base.py  chat.py  chat_buffer.py  chat_summary.py  hybrid.py  hybrid_adaptive.py  hybrid_adaptive_plus.py  hybrid_llm.py  hybrid_semantic.py  rag.py  rag_chroma.py  rag_haystack.py  rag_llamaindex.py  rag_llamaindex_chroma.py  rag_numpy.py  rag_rerank.py  router.py  tools.py  tools_native.py  tools_react.py
src/localagent/rag/: base.py  chroma_store.py  factory.py  haystack_chroma_store.py  haystack_store.py  llamaindex_chroma_store.py  llamaindex_store.py  numpy_store.py  rerank_store.py
src/localagent/tools/: __init__.py  calculator.py  files.py  memory_tool.py  registry.py  retrieval.py  shell.py  web.py
